# Grid_1f

./: Makefile.am  configure.ac
Grid/: Makefile.am
Grid/qcd/action/fermion/instantiation/: generate_instantiations.sh
benchmarks/: Makefile.am
